feat: add slide viewer frontend
